--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,1 +1,8 @@
-<h1>Welcome to my web app</h1>
+<% @quizzes.each do |quiz| %>
+  <div>
+    <h1><%= quiz.name %></h1><br />
+    <p><%= quiz.description %></p><br />
+  </div>
+
+  <hr />
+<% end %>
